# PlatONE-Go

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Makefile  README.md  circle.yml  gen_release_pkg.sh  go.mod  interfaces.go  packBCWasm.sh  test
cmd/SysContracts/: CMakeLists.txt  README.md
cmd/SysContracts/CMakeModules/: FindWasm.cmake  wasm.cmake
cmd/SysContracts/appContract/: CMakeLists.txt
cmd/SysContracts/appContract/appDemo/: CMakeLists.txt  appDemo.cpp
cmd/SysContracts/appContract/demo/: CMakeLists.txt  demo.cpp
cmd/SysContracts/appContract/my_contract/: CMakeLists.txt
cmd/SysContracts/bcwasmlib/: CMakeLists.txt
cmd/SysContracts/bcwasmlib/src/: RLP.cpp
cmd/SysContracts/doc/: CodeStyle.md  NodeManagerAPI.md  NodeRegister.md  UnitTest_wasm.md  UserManagerAPI.md  UserRegisterManagerAPI.md  cnsManager.md  roleRegister.md
cmd/SysContracts/hello/: CMakeLists.txt  hello.cpp
cmd/SysContracts/lib/: libbcwasm.bc  libc++.bc  libc.bc
cmd/SysContracts/libc/: CMakeLists.txt
cmd/SysContracts/script/: autoUnitTest.sh  autoproject.sh  autoprojectForApp.sh  autoprojectForTest.sh  create_accout.sh  unlock_account.sh
cmd/SysContracts/systemContract/: CMakeLists.txt  vccMain.cpp
cmd/SysContracts/systemContract/cnsManager/: CMakeLists.txt  cnsManager.cpp
cmd/SysContracts/systemContract/cnsProxy/: CMakeLists.txt  cnsProxy.cpp
cmd/SysContracts/systemContract/common/: gdef.hpp  util.hpp
cmd/SysContracts/test/: arrayTest.cpp  listTest.cpp  mapTest.cpp
cmd/SysContracts/testContract/: CMakeLists.txt
cmd/SysContracts/unitTest/: log.h  unittest.hpp
(+3877 files in other folders)
