#add_subdirectory(custom_folder)

add_subdirectory(cnsManager)

add_subdirectory(cnsProxy)

add_subdirectory(nodeManager)

add_subdirectory(nodeRegister)

add_subdirectory(userRegister)

add_subdirectory(userManager)

add_subdirectory(roleManager)

add_subdirectory(roleRegister)

add_subdirectory(paramManager)

add_subdirectory(multisig)
